    * NPC-per-map limit raised from 36 to 100 [James]
    * New text box conditional to display menus [James]
    * New menu bitset to advance any open text box when the menu
      closes [James]
    * New attack bitsets
      * "Don't trigger spawning on kill" [James]
      * "Check costs when used as an item" [James]
      * "Re-check costs after attack delay" [James]

  * Bugfixes
    * bug 678: Ogg music problems in game with werewaffle version
      [James]

  * New Plotscripting Stuff
    * get hero speed [MCW]

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * Many old variables re-organized into types
    * Many GOSUB blocks converted to SUBs (many still remain)
    * The code to automatically fade songs in and out has been
      removed. It wasn't cool enough to warrant the headaches
      it caused [James]

August 20 2008 [werewaffle+]

  * Bugfixes
    * Bug 669: Music continues to play when you exit back to the game
      browsing screen
    * Bug 670: Sound effect cache not flushed on game exit
    * Bug 671: Lingering ogg file prevents playing.tmp cleanup

August 16 2008 [werewaffle]

  * New Features
    * While editing the tilemap of a map, use Ctrl+P to fill in the
      current maptile and all maptiles of the same type touching
      the current maptile with the selected maptile. This is analogous
      in functionality to the paint can tool in most modern drawing
      programs. [Cameron Wilkin]
    * Mark/Clone brush tool in the sprite editor and the maptile editor.
      Mark a rectangular region of a sprite and then use the clone tool
      to duplicate it. [James Paige]
    * Press F5 in the browser to refresh the listing, and to fetch the
      names of all drives (under Windows); this is no longer done
      automatically as it was too slow.
      Press backspace to go up a directory.
      Also sped up, and removed the 255 file limit. [Ralph Versteegen]
    * New default Master Palette for new games. [NeoTA, Everybody]